--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
+.login{
+  /* background-color: rgba(36, 44, 87, 0.096); */
+  border: rgba(14, 15, 26, 0.87) solid 1px;
+  width: 600px;
+  height:303px ;
+  margin-top: 11%;
+  margin-bottom: 90%;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.loginForm{
+  margin-right: 100px;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.loginicon{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loginAdmin{
+  background-color: rgba(14, 15, 26, 0.87);
 }
